--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -19,4 +19,4 @@ jobs:
         run: pip3 install -r requirements.txt
 
       - name: Run unit tests
-        run: python3 test
+        run: python3 tests
