Add Pylint automation

--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -18,5 +18,8 @@ jobs:
       - name: Setup unit tests
         run: pip3 install -r requirements.txt
 
+      - name: Run Pylint
+        run: pylint src
+
       - name: Run unit tests
         run: python3 tests
