--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,5 +26,5 @@ dependencies = []
 version = { attr = "larakit.__version__" }
 
 [project.urls]
-Homepage = "https://laratranslate.com/"
-Source = "https://github.com/translated/lara-python"
+Homepage = "https://github.com/translated/larakit"
+Source = "https://github.com/translated/larakit"
